--- a/main.html
+++ b/main.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <title>Pseudo-Elements Example</title>
+  <style>
+    #container {
+      margin: 20px;
+    }
+    #container::before {
+      content: "Before Content - ";
+      color: #f00;
+      font-size: 20px;
+    }
+    #container::after {
+      content: " - After Content";
+      color: #f00;
+      font-size: 20px;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <div id="container">
+    This is the main content inside the container.
+  </div>
 </body>
-
 </html>
