--- a/main.html
+++ b/main.html
@@ -2,7 +2,21 @@
 <html>
 <head>
   <title>Pseudo-Elements Example</title>
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    #container {
+      margin: 20px;
+    }
+    #container::before {
+      content: "Before Content - ";
+      color: #f00;
+      font-size: 20px;
+    }
+    #container::after {
+      content: " - After Content";
+      color: #f00;
+      font-size: 20px;
+    }
+  </style>
 </head>
 <body>
   <div id="container">
