--- a/main.html
+++ b/main.html
@@ -7,12 +7,12 @@
       margin: 20px;
     }
     #container::before {
-      content: "Before Content - ";
+      content: "Before Element";
       color: #f00;
       font-size: 20px;
     }
     #container::after {
-      content: " - After Content";
+      content: "After Element";
       color: #f00;
       font-size: 20px;
     }
@@ -20,7 +20,7 @@
 </head>
 <body>
   <div id="container">
-    This is the main content inside the container.
+    This is the main container element
   </div>
 </body>
 </html>
